      places.
    - Source the above created file in /sbin/init right before starting
      busybox init in the 2.2 scenario, and remove /dev/vc/[2-5] when running
      on a serial console.
    The above two changes should make serial console work on 2.2 systems.
  * Bastian Blank
    - Fix the above changes for work with special cases, like s390.

 -- Bastian Blank <waldi@debian.org>  Fri, 30 Jul 2004 11:30:25 +0200

rootskel (0.88) unstable; urgency=low

  * Bastian Blank
    - Fix installer entry in passwd.

 -- Bastian Blank <waldi@debian.org>  Thu, 22 Jul 2004 10:36:12 +0200

rootskel (0.87) unstable; urgency=low

  * Bastian Blank
    - Fix usage of return codes.
  * Colin Watson
    - Install S35framebuffer-linux again.

 -- Colin Watson <cjwatson@debian.org>  Tue, 20 Jul 2004 13:47:48 +0100

rootskel (0.86) unstable; urgency=low

  * Bastian Blank
    - Make sure that debconf exits before we mount readonly.
    - Load framebuffer module only once and only on virtual terminal
      (closes: #259950).
    - Don't overwrite terminal type if there is one set.
    - Never use output of scripts which may start debconf.
  * Thiemo Seufer
    - Don't show umount non-error in sbin/init.

 -- Bastian Blank <waldi@debian.org>  Sun, 18 Jul 2004 21:07:16 +0200

rootskel (0.85) unstable; urgency=low

  * Bastian Blank
    - Use small syslog output. Needs busybox-cvs 20040623-1.
    - Allow the exit code of debconf be non null.
    - Reboot/halt machine if asked to do so.
  * Joshua Kwan
    - Alias usb-ohci and usb-uhci to their respective *-hcd names when
      on 2.6, by writing to modules.conf.

 -- Bastian Blank <waldi@debian.org>  Sat, 10 Jul 2004 19:16:13 +0200

rootskel (0.84) unstable; urgency=low

  * Joey Hess
    - Minor output fix.

 -- Joey Hess <joeyh@debian.org>  Wed,  7 Jul 2004 10:45:39 -0400

rootskel (0.83) unstable; urgency=low

  * Kenshi Muto
    - Brush up fbcon / vga16fb loading routine.
