@@ -8,9 +8,15 @@ files = \
 	S01mount \
 	S10syslog \
 	S20templates \
-	S30read-environment
+	S30read-environment \
+	S35term
 
 ifeq ($(DEB_HOST_GNU_SYSTEM),linux)
+  ifeq ($(DEB_HOST_GNU_CPU),i386)
+    files += \
+	S40framebuffer-module-linux-i386
+   endif
+
   ifeq ($(DEB_HOST_GNU_CPU),powerpc)
     files += \
 	S45keyboard-linux-powerpc
