@@ -1,0 +1,2 @@
+#!/bin/sh
+. /lib/debian-installer/detect-console
