@@ -1,4 +1,4 @@
-if [ -n "$TERM_FRAMEBUFFER_TRY" -a ! -e /dev/fb/0 ]; then
+if [ -n "$TERM_FRAMEBUFFER_TRY" ]; then
 	echo "Trying to enable the frame buffer..."
 	case $(uname -r) in
 	2.6.*)
