@@ -14,10 +14,6 @@ ifeq ($(DEB_HOST_GNU_SYSTEM),linux)
     files += \
 	S35framebuffer-linux
   endif
-  ifeq ($(DEB_HOST_GNU_CPU),i386)
-    files += \
-	S33framebuffer-module-linux-i386
-  endif
 
   files += \
 	S40term-linux \
