@@ -11,8 +11,9 @@ rootskel (0.89) UNRELEASED; urgency=low
     The above two changes should make serial console work on 2.2 systems.
   * Bastian Blank
     - Fix the above changes for work with special cases, like s390.
+    - Load framebuffer modules only once.
 
- -- Bastian Blank <waldi@debian.org>  Fri, 30 Jul 2004 11:30:25 +0200
+ -- Bastian Blank <waldi@debian.org>  Fri, 30 Jul 2004 13:06:10 +0200
 
 rootskel (0.88) unstable; urgency=low
 
